# lesson-planning

./: .dockerignore  .gitignore  .yolorc  CLAUDE.md  DEPLOY.md  Dockerfile  Dockerfile.yolo  FORMAT.md  Makefile  README.md  app.py  calendar_view.py  collab.example.json  collab.py  course_bundle.py  export_planning.py  fly.toml  hierarchy.py  import_objectives.py  import_planning.py  load_nodes.py  package-lock.json  package.json  plan_io.py  pyproject.toml  rebuild_db.py  render_outline.py  schema.sql  seed.py  serve.sh  set-secrets.sh  template.env  test_calendar_view.py  test_conflict.py  test_import_objectives.py  test_plan_io.py  test_save.py  test_schema_load.py  test_validate.py  todo.txt  (+2 more)
calendar-extras/: bhs-2025-2026.json  bhs-2026-2027.json
examples/: objectives.tsv  widgets-hierarchy.json  widgets-hierarchy.md
frontend/: editor.js
lesson-planning/: app.py  schema.sql
plans/: calendar.md  categorize-objectives.md  compare-books-plan.md  compare-books.md  course-scoped-objectives.md  elevate-course-outline.md  extract-extractors.md  extract-lesson-planning.md  git-collaboration.md  hierarchy-identity-and-kind.md  lesson-planning.md  manual-save.md  merge-same-text-objectives.md  multi-user-collaboration.md  pinned-units.md  responsive-css.md  retire-flavor-sniffing.md  scripts-into-app.md  seed-on-startup.md  sidebar-driven-setup.md  summarize-ced.md  summarize-csa-ced.md  summarize-csp-ced.md  summarize-ib-cs-guide.md
static/: INSTALL.md  editor.bundle.js
templates/: _calendar_content.html  _collab_pending.html  _lessonpart.html  _outline_units.html  (+19 more)
(+73 files in other folders)
