[project]
name = "lesson-planning"
version = "0.1.0"
description = "A course-agnostic lesson-planning tool: ingest a curriculum hierarchy, place objectives, and render a traceable lesson plan."
requires-python = ">=3.13"
dependencies = [
    # The school-calendar library (import name `bells`) and the bundled BHS-area
    # calendar data, both published to PyPI. To develop the libraries alongside
    # this app, add a `[tool.uv.sources]` path/editable source for either.
    "bell-schedule>=0.7.0",
    "bhs-calendars>=2.9.1",
    "flask",
    # Production WSGI server (the fly deploy). Run with a single threaded worker
    # only -- the app keeps live in-process state (push queue, timers, SQLite
    # caches, the git clone); never scale to multiple workers. See
    # plans/production-wsgi-server.md.
    "gunicorn",
]
